--- a/PalladiumDwh.Core.Tests/packages.config
+++ b/PalladiumDwh.Core.Tests/packages.config
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.0" targetFramework="net462" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="Dapper" version="1.50.4" targetFramework="net462" />
   <package id="Dapper.Contrib" version="1.50.4" targetFramework="net462" />
   <package id="Effort.EF6" version="1.3.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
+  <package id="Moq" version="4.13.0" targetFramework="net462" />
   <package id="NBuilder" version="5.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="NMemory" version="1.1.2" targetFramework="net462" />
   <package id="NUnit" version="3.9.0" targetFramework="net462" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net462" />
   <package id="Z.Dapper.Plus" version="1.3.25" targetFramework="net462" />
 </packages>
