--- a/PalladiumDwh.DwapiService/Properties/Settings.settings
+++ b/PalladiumDwh.DwapiService/Properties/Settings.settings
@@ -15,10 +15,10 @@
       <Value Profile="(Default)">9005d618-3965-8877-97a5-7a27cbb21c8f</Value>
     </Setting>
     <Setting Name="QueuePoll" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">300</Value>
+      <Value Profile="(Default)">10</Value>
     </Setting>
     <Setting Name="LiveSync" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://localhost:4777/stages/</Value>
+      <Value Profile="(Default)">http://koske-mac:4777/stages/</Value>
     </Setting>
   </Settings>
 </SettingsFile>
