--- a/PalladiumDwh.DwapiService/Properties/Settings.settings
+++ b/PalladiumDwh.DwapiService/Properties/Settings.settings
@@ -9,22 +9,22 @@
       <Value Profile="(Default)">200</Value>
     </Setting>
     <Setting Name="Z_Dapper_Plus_LicenseName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">1755;701-ThePalladiumGroup</Value>
+      <Value Profile="(Default)">1755;700-ThePalladiumGroup</Value>
     </Setting>
     <Setting Name="Z_Dapper_Plus_LicenseKey" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">9005d618-3965-8877-97a5-7a27cbb21c8f</Value>
-    </Setting>
-    <Setting Name="QueuePoll" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">120</Value>
-    </Setting>
-    <Setting Name="LiveSync" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://koske-pc01:4777/stages/</Value>
+      <Value Profile="(Default)">218460a6-02d0-c26b-9add-e6b8d13ccbf4</Value>
     </Setting>
     <Setting Name="ProfileCount" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">1000</Value>
     </Setting>
     <Setting Name="ProfileBatchCount" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">4</Value>
+    </Setting>
+    <Setting Name="QueuePoll" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">40</Value>
+    </Setting>
+    <Setting Name="LiveSync" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:4777/stages/</Value>
     </Setting>
   </Settings>
 </SettingsFile>
