--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Migrations\202207021948175_GeneratedStageId.designer.cs">
       <DependentUpon>202207021948175_GeneratedStageId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202208191232580_PatientVisitRefillDate.cs" />
+    <Compile Include="Migrations\202208191232580_PatientVisitRefillDate.designer.cs">
+      <DependentUpon>202208191232580_PatientVisitRefillDate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -300,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202207021948175_GeneratedStageId.resx">
       <DependentUpon>202207021948175_GeneratedStageId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208191232580_PatientVisitRefillDate.resx">
+      <DependentUpon>202208191232580_PatientVisitRefillDate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\MasterFacility.csv" />
   </ItemGroup>
