--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -117,7 +117,7 @@
         <value>218460a6-02d0-c26b-9add-e6b8d13ccbf4</value>
       </setting>
       <setting name="WorkerCount" serializeAs="String">
-        <value>alpha-5,beta-30,gamma-10,delta-5,omega-5,default-1</value>
+        <value>Manifest-10,Patient-10,PatientArt-5,PatientPharmacy-5,PatientVisits-20,PatientStatus-5,Covid-5,DefaulterTracing-1,PatientLabs-5,PatientBaselines-1,PatientAdverseEvents-1,Otz-5,Ovc-5,DepressionScreening-1,DrugAlcoholScreening-1,EnhancedAdherenceCounselling-1,GbvScreening-1,Ipt-1,AllergiesChronicIllness-1,ContactListing-1,default-1</value>
       </setting>
     </PalladiumDwh.DWapi.Properties.Settings>
   </applicationSettings>
