--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -252,6 +252,10 @@
     <Compile Include="Migrations\202306090726240_AddedZscoreabsolute.designer.cs">
       <DependentUpon>202306090726240_AddedZscoreabsolute.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202307311244410_AddReasonToLabs.cs" />
+    <Compile Include="Migrations\202307311244410_AddReasonToLabs.designer.cs">
+      <DependentUpon>202307311244410_AddReasonToLabs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -351,6 +355,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202306090726240_AddedZscoreabsolute.resx">
       <DependentUpon>202306090726240_AddedZscoreabsolute.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202307311244410_AddReasonToLabs.resx">
+      <DependentUpon>202307311244410_AddReasonToLabs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\MasterFacility.csv" />
   </ItemGroup>
